# AAK_Aktindsigt_Modulus

./: .gitignore  .pylintrc  README.md  main.py  pyproject.toml
robot_framework/: __main__.py  config.py  error_screenshot.py  exceptions.py  linear_framework.py  maintest.py  process.py  queue_framework.py  reset.py
robot_framework/Processer/: add_testfiles.py  make_folderpath.py  retry_func.py  test.py
robot_framework/Processer/Fileconvert/: docx_to_pdf.py  msg_to_pdf.py
robot_framework/Processer/Modulus/: modulus_api_calls.py
