[build-system]
requires = ["setuptools>=65.0"]
build-backend = "setuptools.build_meta"

[project]
name = "robot_framework"
version = "0.0.1"
authors = [
  { name="ITK Development", email="itk-rpa@mkb.aarhus.dk" },
]
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: Microsoft :: Windows",
]
dependencies = [
    "OpenOrchestrator == 1.*", # MUST
    "Pillow == 9.5.0", # MUST
    "pyodbc == 5.0.1", # OPTIONAL - kan importeres ind, hvis der bruges andre SQL kald end den der indsætter data i Resulttabellen
    "msb_rpa == 0.1.*", # MUST - Selvudviklet bibliotek med loginmetoder, webdrivere, web metoder mv.
    "selenium == 4.14.0", # OPTIONAL - must hvis du arbejder med webautomatisering i brugergrænsefladen.
    "pandas  == 2.1.4", # OPTIONAL - standard framework til at arbejde med data i tabelformat.
    "selenium-wire == 5.1.0", # OPTIONAL - kan bruges til at logge ind i et system for at hente en token ud til API kald.
    "requests == 2.31.0", # OPTIONAL - bruges til API kald.
    "fpdf == 1.7.2"
]

[project.optional-dependencies]
dev = [
  "pylint",
  "flake8"
]